--- a/PostalDove/PostalDove.csproj
+++ b/PostalDove/PostalDove.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainPresenter.cs" />
+    <Compile Include="MessageClass.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Process.cs">
       <SubType>Form</SubType>
@@ -75,6 +76,9 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
